Bug fix to make privacy policy links visible.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1304,8 +1304,20 @@ footer.bk-footer {
     color: @font-swatch6-color;
 }
 
-.bk-footer .widget.profile span, .bk-footer .widget.profile p, .bk-footer .widget.profile a {
+.bk-footer .widget.profile span,
+.bk-footer .widget.profile p,
+.bk-footer .widget.profile a {
     color: @font-swatch6-color;
+}
+
+.gdpr-footer {
+    background-color: @color-swatch6;
+    padding: 15px 0;
+    
+    a {
+        padding: 0 10px;
+    	color: @font-swatch6-color;
+    }
 }
 
 /* ===============================
